CHATS_SIT/force-app/main/default/objects/T_DOC_RQ__c.object
<CustomObject>
    <fields>
        <fullName>Adjustment_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Adjustment  Address ID</label>
        <referenceTo>T_ADJMT_ADDR__c</referenceTo>
        <relationshipLabel>Correspondence Request</relationshipLabel>
        <relationshipName>Correspondence_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CDE_CORSPD_STATUS__c</fullName>
        <label>Correspondence Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>STAT_CORSPD</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_COUNTY__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>County Code</label>
        <referenceTo>T_COUNTY__c</referenceTo>
        <relationshipLabel>Correspondence Request</relationshipLabel>
        <relationshipName>Correspondence_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CDE_TYPE_RCPT__c</fullName>
        <label>Recepient Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>TYPE_RCPT_CORSPD</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CR200_Ineligibility_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CR200_Ineligibility_Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DTE_REQ__c</fullName>
        <label>Date Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDN_ADJMT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Adjustment ID</label>
        <referenceTo>T_ADJMT__c</referenceTo>
        <relationshipLabel>Correspondence Request</relationshipLabel>
        <relationshipName>Correspondence_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPV_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IPV Information ID</label>
        <referenceTo>IPV_Information__c</referenceTo>
        <relationshipLabel>Correspondence Request</relationshipLabel>
        <relationshipName>Correspondence_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_AGRMT_FISCAL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fiscal Agreement ID</label>
        <referenceTo>T_PROVR_FISCAL_AGREMENT__c</referenceTo>
        <relationshipLabel>Correspondence Request</relationshipLabel>
        <relationshipName>Correspondence_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_AUTH__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Authorization ID</label>
        <referenceTo>T_AUTH__c</referenceTo>
        <relationshipLabel>Correspondence Request</relationshipLabel>
        <relationshipName>Correspondence_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_CASE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>T_SBSD_CASE__c</referenceTo>
        <relationshipLabel>Correspondence Request</relationshipLabel>
        <relationshipName>Correspondence_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_CLIENT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Individual</label>
        <referenceTo>T_SBSD_INDIV__c</referenceTo>
        <relationshipLabel>Correspondence Request</relationshipLabel>
        <relationshipName>Correspondence_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IDN_PMT__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Payment ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDN_PROVR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider ID</label>
        <referenceTo>T_CHATS_PROVR_STATUS__c</referenceTo>
        <relationshipLabel>Correspondence Request</relationshipLabel>
        <relationshipName>Correspondence_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_ADDENDUM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Slot Contract Addendum ID</label>
        <referenceTo>T_SLOT_CONTRACT_ADDENDUM__c</referenceTo>
        <relationshipLabel>Correspondence Request</relationshipLabel>
        <relationshipName>Correspondence_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NME_CORSPD__c</fullName>
        <label>Correspondence Name</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NME_CORSPD</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CR107_Checklist__c</fullName>
        <label>CR107 Checklist</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checklist_CR107</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CR107_OTHER_TEXT__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>CR107_OTHER_TEXT</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CR702_Checklist__c</fullName>
        <label>CR702 Checklist</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checklist_CR702</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CR702_TEXT__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <description>Fingerprint Cards For</description>
        <label>CR702_TEXT</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RSN_CODE__c</fullName>
        <label>Reason Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GEN_FLAG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>New field create as part of Jira Task CHATS-5337</description>
        <label>Generator Flag</label>
        <type>Checkbox</type>
    </fields>
        <fields>
        <fullName>IDN_CASE_F__c</fullName>
        <formula>IDN_CASE__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Id (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDN_COUNTY_F__c</fullName>
        <formula>CDE_COUNTY__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>County (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDN_PROVR_F__c</fullName>
        <formula>IDN_PROVR__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Provider ID (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <formula>IF(RSN_CODE__c = &apos;CR0003&apos;||RSN_CODE__c = &apos;CR0006&apos;||RSN_CODE__c = &apos;CR0001&apos; || RSN_CODE__c = &apos;CR0002&apos; || RSN_CODE__c  = &apos;CR0023&apos; , IDN_CASE__r.Owner:User.FirstName +&apos; &apos;+IDN_CASE__r.Owner:User.LastName ,
            IF(RSN_CODE__c = &apos;CR0007&apos;, IDN_AGRMT_FISCAL__r.Owner:User.FirstName +&apos; &apos;+IDN_AGRMT_FISCAL__r.Owner:User.LastName,
            IF(RSN_CODE__c = &apos;CR0009&apos;||RSN_CODE__c = &apos;CR0011&apos;, IDN_ADJMT__r.Owner:User.FirstName+&apos; &apos;+IDN_ADJMT__r.Owner:User.LastName ,
            IF(RSN_CODE__c = &apos;CR0010&apos;, IF( NOT( ISBLANK(IDN_CASE__c) ) , IDN_CASE__r.Owner:User.FirstName + &apos; &apos; + IDN_CASE__r.Owner:User.LastName , IDN_AUTH__r.IDN_CASE__r.Owner:User.FirstName + &apos; &apos; + IDN_AUTH__r.IDN_CASE__r.Owner:User.LastName ),
            Owner:User.FirstName+&apos; &apos;+Owner:User.LastName ) ) ) )</formula>
        <label>Requested By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suppressed_Indicator__c</fullName>
        <label>Suppressed Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Suppressed_Indicator</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>isPrinted__c</fullName>
        <description>isPrinted</description>
        <label>isPrinted</label>
        <length>10</length>
        <type>Text</type>
    </fields>
        <fields>
        <fullName>CR212_Checklist__c</fullName>
        <label>CR212 Checklist</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checklist_CR212</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>cde_lang_doc__c</fullName>
        <description>Preferred Correspondence Language</description>
        <label>Language</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact Phone Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disqualification_Begin_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Disqualification Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disqualification_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Disqualification End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disqualification_Hearing_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Disqualification Hearing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Occurrences__c</fullName>
        <label>Number of occurrences</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Responsible_Party_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Responsible Party Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Correspondence Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>NME_CORSPD__c</columns>
        <columns>IDN_CASE__c</columns>
        <columns>DTE_REQ__c</columns>
        <columns>CDE_CORSPD_STATUS__c</columns>
        <columns>CDE_COUNTY__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Manual_Correspondences</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>Manual Correspondences</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Correspondence ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Correspondence Request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>