CHATS_SIT/force-app/main/default/objects/T_DOC_RQ__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NME_CORSPD__c</columns>
    <columns>IDN_CASE__c</columns>
    <columns>DTE_REQ__c</columns>
    <columns>CDE_CORSPD_STATUS__c</columns>
    <columns>CDE_COUNTY__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>