CHATS_SIT/force-app/main/default/objects/T_DOC_RQ__c/listViews/Manual_Correspondences.listView-meta.xml
<ListView>
    <fullName>Manual_Correspondences</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Manual Correspondences</label>
</ListView>